--- a/static/css/landing_page.css
+++ b/static/css/landing_page.css
@@ -1,6 +1,6 @@
 html {
   background: #FFFFFF;
-  zoom: 1;
+  zoom: 2;
 }
 
 /* body {
